# Rust-Solana

./: .gitignore  README.md  commands.sh
HelloWorld/: README.md
HelloWorld/src/: lib.rs  main.rs
Local/: commands.sh
Local/solana-movie-token-client/src/: index.ts
Solana-Movie-Client/: README.md
Solana-Movie-Client/src/: index.ts
Solana-Movie-Review/: package-lock.json
Solana-Movie-Review/components/: Form.tsx
Solana-Movie-Review/coordinators/: MovieCoordinator.ts
Solana-StudentIntros-Frontend/: README.md
Solana-StudentIntros-Frontend/SolanaPlayground/: instruction.rs  lib.rs  state.rs
Solana-StudentIntros-Frontend/components/: Form.tsx  StudentIntroList.tsx
Solana-StudentIntros-Frontend/coordinators/: StudentIntroCoordinator.ts
client/: README.md  client.ts
solana-movie-TEST/: Cargo.toml
solana-movie-TEST/src/: processor.rs
solana-movie-review/: README.md  package-lock.json  package.json
solana-movie-review/components/: Form.tsx
