[package]
name = "solana-movie-TEST"
version = "0.1.0"
edition = "2021"
[features]
no-entrypoint = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solana-program = "~1.14.11"
borsh = "0.9.3"
thiserror = "1.0.31"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="=1.1.2", features = [ "no-entrypoint" ] }

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "~1.14.11"
solana-sdk = "~1.14.11"

[lib]
crate-type = ["cdylib", "lib"]